<resources>
    <string name="app_name">Swap it!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Swap it</string>
    <string name="nav_header_subtitle">Efrei Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>
    <string name="title_activity_login">Connexion</string>
    <string name="suppression_compte_texte">Voulez-vous vraiment supprimer votre compte ? \nToutes vos données seront effacées et vous perdrez vos swaps.</string>
    <string name="success">Succès !</string>
    <string name="annonce_check">Ton annonce est en ligne</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="page_profile_name">Profil utilisateur</string>
    <string name="page_edit_profile_name">Editer informations utilisateur</string>
    <string name="user_name">Prénom</string>
    <string name="user_surname">Nom</string>
    <string name="user_mail">E-mail Efrei</string>
    <string name="user_phone">Numéro de téléphone</string>
    <string name="user_password">Mot de passe</string>
    <string name="user_confirm_password"> Confirmation mot de passe</string>
    <string name="user_resum">Rapide description"</string>
    <string name="validate_edit">Valider</string>
    <string name="promo_prompt">Promotion</string>
    <string-array name="promo_arrays">
        <item>Selectionner votre annnée</item>
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
        <item>M1</item>
        <item>M2</item>
    </string-array>
    <string-array name="add_arrays">
        <item>Selectionner votre situation</item>
        <item>ø</item>
        <item>Prime</item>
        <item>New</item>
    </string-array>
    <string-array name="section_arrays">
        <item>Selectionner votre section</item>
        <item>Classique</item>
        <item>Internationale</item>
        <item>Bio numérique</item>
    </string-array>
    <string name="page_settings_name">Paramètres</string>
    <string name="modification_profil">Modifier le profil</string>
    <string name="historique">Historique</string>
    <string name="notification">Notifications</string>
    <string name="modification_password">Modifier le mot de passe</string>
    <string name="supprimer_compte">Supprimer le compte</string>
    <string name="page_notification_name">Notification</string>
    <string name="activate_all_notification">Activer toutes les notifications</string>
    <string name="activate_soutien_notification">Soutien</string>
    <string name="activate_service_notification">Services</string>
    <string name="saisie_ancien">Saisissez le mot de passe actuel</string>
    <string name="saisie_nouveau">Saisissez le nouveau mot de passe</string>
    <string name="saisie_confirmation">Confirmer votre nouveau mot de passe</string>
    <string name="menu_service">Service</string>
    <string name="menu_soutien">Soutien</string>
    <string name="date">Date</string>
    <string name="hour">Heure</string>
    <string name="nombre_swap">Nombre de swap</string>
    <string name="description_annonce">Description de l\'annonce</string>
    <string name="master">Master</string>
    <string name="licence">Licence</string>
    <string-array name="choose_item">
        <item>Selectionner un semestre et une UE</item>
    </string-array>
    <string-array name="choose_cycle">
        <item>Selectionner votre cycle</item>
    </string-array>
    <string-array name="semestre_array">
        <item>Selectionner un semestre</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S6</item>
        <item>S7</item>
        <item>S8</item>
        <item>S9</item>
        <item>S10</item>
    </string-array>
    <string-array name="semestre_licence_array">
        <item>Sélectionner un semestre</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S6</item>
    </string-array>
    <string-array name="semestre_master_array">
        <item>Sélectionner un semestre</item>
        <item>S7</item>
        <item>S8</item>
        <item>S9</item>
    </string-array>
    <string-array name="majeure_array">
        <item>Sélectionner une majeure</item>
        <item>Avionique</item>
        <item>Cybersécurité</item>
        <item>Développement logiciel</item>
        <item>Finance de marché</item>
        <item>IT pour entreprise</item>
        <item>Réalité virtuelle</item>
        <item>Sciences des données et intelligence artificielle</item>
        <item>Systèmes intelligents et robotiques</item>
        <item>Systèmes réseaux et bases de données</item>
    </string-array>
    <string-array name="no_matiere">
        <item>Pas de matiere pour l\'UE sélectionnée</item>
    </string-array>
    <string-array name="ue_array">
        <item>Selectionner une UE</item>
        <item>Formation Generale</item>
        <item>Informatique</item>
        <item>Mathematiques</item>
        <item>Physique</item>
    </string-array>
    <string-array name="matiere_S1_formation_generale">
        <item>Anglais</item>
        <item>Communication</item>
    </string-array>
    <string-array name="matiere_S1_informatique">
        <item>Algorithmie</item>
        <item>Programmation</item>
    </string-array>
    <string-array name="matiere_S1_mathematiques">
        <item>Nombres et Structures</item>
        <item>Fonctions et Variations</item>
    </string-array>
    <string-array name="matiere_S1_physique">
        <item>Atome à la puce</item>
        <item>Electricité générale</item>
        <item>Information numérique</item>
    </string-array>
    <string-array name="matiere_S2_formation_generale">
        <item>Anglais</item>
        <item>Communication</item>
        <item>Economie</item>
    </string-array>
    <string-array name="matiere_S2_informatique">
        <item>Algorithmie</item>
        <item>Programmation</item>
    </string-array>
    <string-array name="matiere_S2_mathematiques">
        <item>Algèbre linéaire</item>
        <item>Sommes finies et infinies</item>
    </string-array>
    <string-array name="matiere_S2_physique">
        <item>Du système à la fonction</item>
        <item>la voix et image</item>
        <item>Mécanique</item>
    </string-array>
    <string-array name="matiere_S3_formation_generale">
        <item>Anglais</item>
        <item>Communication</item>
        <item>Economie</item>
        <item>Histoire des Sciences</item>
    </string-array>
    <string-array name="matiere_S3_informatique">
        <item>Algorithmie</item>
        <item>Programmation</item>
    </string-array>
    <string-array name="matiere_S3_mathematiques">
        <item>Mathématiques du réel</item>
        <item>Probabilités et Statistiques</item>
    </string-array>
    <string-array name="matiere_S3_physique">
        <item>Physique quantique</item>
        <item>Systeme de transmission</item>
        <item>Champs éléctromagnetique</item>
    </string-array>
    <string-array name="matiere_S4_formation_generale">
        <item>Anglais</item>
        <item>Communication</item>
        <item>Organisation et processus</item>
    </string-array>
    <string-array name="matiere_S4_informatique">
        <item>Algorithmie</item>
        <item>Programmation</item>
    </string-array>
    <string-array name="matiere_S4_mathematiques">
        <item>Analyse de données</item>
        <item>Mathématiques pour informatique</item>
        <item>Probabilités et Statistiques</item>
    </string-array>
    <string-array name="matiere_S4_physique">
        <item>Systèmes numériques</item>
        <item>Thermodynamique</item>
        <item>Propagation électromagnétique</item>
    </string-array>
    <string-array name="matiere_S5_formation_generale">
        <item>Probability and Performance</item>
        <item>English for Technologists</item>
    </string-array>
    <string-array name="matiere_S5_informatique">
        <item>Java 1</item>
        <item>Web Programming</item>
        <item>Databases</item>
        <item>Networks and Protocols</item>
        <item>Operating Systems</item>
    </string-array>
    <string-array name="matiere_S6_formation_generale">
        <item>Anglais</item>
        <item>Communication</item>
        <item>Droit des scoiétés et des contrats</item>
        <item>Analyse financière</item>
    </string-array>
    <string-array name="matiere_S6_informatique">
        <item>Java 2</item>
        <item>Base de données 2</item>
        <item>Architecture des ordinateurs</item>
        <item>Introduction à la cybersécurité</item>
    </string-array>
    <string-array name="matiere_S6_mathematiques">
        <item>Optimisation</item>
        <item>Théorie des groupes</item>
        <item>Théorie des graphes</item>
    </string-array>
    <string-array name="matiere_S6_physique">
        <item>VHDL</item>
        <item>Logique programmable</item>
        <item>Systèmes linéaires</item>
        <item>Théorie du signal 1</item>
        <item>Théorie du signal 2</item>
        <item>Canaux de transmission</item>
    </string-array>
    <string-array name="matiere_S7_avionique">
        <item>Labview</item>
        <item>Avions du futur</item>
        <item>Anglais</item>
        <item>IT Law and Ethics</item>
        <item>Droit des NTIC et éthique</item>
    </string-array>
    <string-array name="matiere_S7_cybersécuité">
        <item>Computer Security</item>
        <item>Introduction à la Cyber Sécurité</item>
        <item>Ethical Hacking</item>
        <item>Cryptography and Network Security</item>
        <item>Anglais</item>
        <item>IT Law and Ethics</item>
        <item>Droit des NTIC et éthique</item>
    </string-array>
    <string-array name="matiere_S7_développement_logiciel">
        <item>Java Enterprise Edition</item>
        <item>DevOps and Continuous Delivery</item>
        <item>C#</item>
        <item>Application Interoperability with Web Services</item>
        <item>Anglais</item>
        <item>IT Law and Ethics</item>
        <item>Droit des NTIC et éthique</item>
    </string-array>
    <string-array name="matiere_S7_finance_de_marché">
        <item>Pricing of Derivatives: Models and Algorithms I</item>
        <item>Introduction to Financial Market</item>
        <item>Econometrics for Finance</item>
        <item>Anglais</item>
        <item>IT Law and Ethics</item>
        <item>Droit des NTIC et éthique</item>
    </string-array>
    <string-array name="matiere_S7_IT_pour_entreprise">
        <item>Operational Decision Making Systems</item>
        <item>Web services</item>
        <item>Information System Technologies</item>
        <item>Information System Modeling</item>
        <item>Anglais</item>
        <item>IT Law and Ethics</item>
        <item>Droit des NTIC et éthique</item>
    </string-array>
</resources>